--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,8 @@
 {
-  "printWidth": 100,
+  "printWidth": 80,
   "singleQuote": false,
   "trailingComma": "none",
   "jsxBracketSameLine": true,
   "endOfLine": "auto",
-  "semi": true
+  "semi": false
 }
